--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     # Build matrix
     strategy:
       matrix:
-        test_type: ['UNIT', 'SLOW', 'Docker']
+        test_type: ['UNIT', 'INDEX', 'DOCKER']
         # We are really not set up for these next two to be multiplicative, so be careful adding more.
         python_version: ['3.8']
         node_version: ['16']
@@ -45,7 +45,7 @@ jobs:
           check-latest: false
 
       - name: Install/Link Postgres
-        if: ${{ matrix.test_type == 'UNIT' || matrix.test_type == 'SLOW' }}
+        if: ${{ matrix.test_type == 'UNIT' || matrix.test_type == 'INDEX' }}
         run: |
           sudo apt-get install curl ca-certificates gnupg
           curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
@@ -55,7 +55,7 @@ jobs:
           echo "/usr/lib/postgresql/14/bin" >> $GITHUB_PATH
           sudo ln -s /usr/lib/postgresql/14/bin/initdb /usr/local/bin/initdb
       - name: Install Deps
-        if: ${{ matrix.test_type == 'SLOW' || matrix.test_type == 'UNIT' }}
+        if: ${{ matrix.test_type == 'INDEX' || matrix.test_type == 'UNIT' }}
         run: |
           node --version
           make build
@@ -95,34 +95,34 @@ jobs:
           poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
           poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
 
-      - name: QA (SLOW)
-        if: ${{ matrix.test_type == 'SLOW' }}
+      - name: QA (INDEX)
+        if: ${{ matrix.test_type == 'INDEX' }}
         env:
           S3_ENCRYPT_KEY: ${{ secrets.S3_ENCRYPT_KEY }}
           # The need for this old environment variable name will go away soon.
           # Once the new snovault is in, we should retain these for a little while to make sure the right
           # variable is being used, and then this can go away. -kmp 9-Mar-2021
           # I have named the ID slightly differently so we can see if the old names are in use.
-          TRAVIS_JOB_ID: cgap-slow-x-test-${{ github.run_number }}-
+          TRAVIS_JOB_ID: cgap-idx-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
-          TEST_JOB_ID: cgap-slow-test-${{ github.run_number }}-
+          TEST_JOB_ID: cgap-idx-test-${{ github.run_number }}-
           GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
           ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
         run: |
-          make remote-test-slow
+          make remote-test-index
           make remote-test-npm
 
-      - name: Cleanup (SLOW)
-        if: ${{ always() && matrix.test_type == 'SLOW' }}
+      - name: Cleanup (INDEX)
+        if: ${{ always() && matrix.test_type == 'INDEX' }}
         env:
           S3_ENCRYPT_KEY: ${{ secrets.S3_ENCRYPT_KEY }}
           # The need for this old environment variable name will go away soon.
           # Once the new snovault is in, we should retain these for a little while to make sure the right
           # variable is being used, and then this can go away. -kmp 9-Mar-2021
           # I have named the ID slightly differently so we can see if the old names are in use.
-          TRAVIS_JOB_ID: cgap-slow-x-test-${{ github.run_number }}-
+          TRAVIS_JOB_ID: cgap-idx-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
-          TEST_JOB_ID: cgap-slow-test-${{ github.run_number }}-
+          TEST_JOB_ID: cgap-idx-test-${{ github.run_number }}-
           GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
           ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
         run: |
@@ -131,11 +131,11 @@ jobs:
           poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
           poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
           # On a one-time basis to clean up some old indexes, need to do this. Delete before merging this branch as unneeded:
-          poetry run wipe-test-indices cgap-idx-x-test search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
-          poetry run wipe-test-indices cgap-idx-test search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices cgap-slow-x-test search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices cgap-slow-test search-cgap-unit-testing-opensearch-tcs45cjpwgdzoi7pafr6oewq6u.us-east-1.es.amazonaws.com:443
 
       - name: Docker Build
-        if: ${{ matrix.test_type == 'Docker' && matrix.node_version == '16' && matrix.python_version == '3.8' }}
+        if: ${{ matrix.test_type == 'DOCKER' && matrix.node_version == '16' && matrix.python_version == '3.8' }}
         run: |
           touch deploy/docker/local/docker_development.ini  # cheap substitute for prepare-docker to make ignored file
           docker build .
