Fix typo in GA testing.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,7 +110,7 @@ jobs:
           GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
           ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
         run: |
-          make remote-test-index
+          make remote-test-indexing
 
       - name: Cleanup (INDEX)
         if: ${{ always() && matrix.test_type == 'INDEX' }}
