--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,15 +37,15 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.9"
-awscli = ">=1.25.36"
-boto3 = "^1.24.36"
-botocore = "^1.27.36"
+awscli = ">=1.27.79"
+boto3 = "^1.26.79"
+botocore = "^1.29.79"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
-dcicpyvcf = "1.0.0.1b0"
-dcicsnovault = "7.2.1.1b2"  # to become "^7.3.0" when snovault PR #248 is merged
+dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
+dcicsnovault = "7.2.1.1b3" # "^7.1.0"
 dcicutils = "^6.10.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
@@ -56,10 +56,10 @@ h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. 
 humanfriendly = "^1.44.9"
 hupper = "1.5"
 idna = ">=2.10,<3"
-isodate = ">=0.5.4,<1"
-jmespath = "0.9.0"
+isodate = ">=0.6.1,<1"
+jmespath = ">=0.10.0,<1"
 jsonschema_serialize_fork = "^2.1.1"
-# keepalive = "0.5"
+# keepalive = ">=0.5,<1"
 loremipsum = "1.0.5"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
@@ -125,8 +125,8 @@ WSGIProxy2 = "0.4.2"
 
 [tool.poetry.dev-dependencies]
 # PyCharm says boto3-stubs contains useful type hints
-boto3-stubs = "^1.24.36"
-botocore-stubs = "^1.27.36"
+boto3-stubs = "^1.26.79"
+botocore-stubs = "^1.29.79"
 coverage = ">=6.2"
 codacy-coverage = ">=1.3.11"
 coveralls = ">=3.3.1"
