--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "7.2.1.1b3" # "^7.1.0"
+dcicsnovault = "7.3.0"
 dcicutils = "^6.10.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
