--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@gmod/tabix": "^1.5.3",
     "@gmod/vcf": "^5.0.6",
-    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.60",
+    "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
+    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.61",
     "auth0-lock": "^11.33.0",
     "d3": "^5.16.0",
     "date-fns": "^2.28.0",
@@ -60,23 +60,24 @@
     "form-serialize": "^0.7.2",
     "generic-filehandle": "^3.0.0",
     "higlass": "1.12.2",
+    "higlass-bigwig-datafetcher": "0.1.2",
+    "higlass-clinvar": "0.2.5",
+    "higlass-cohort": "0.3.3",
+    "higlass-general-vcf": "0.1.2-beta.1",
+    "higlass-gnomad": "0.2.2-beta.1",
+    "higlass-orthologs": "0.2.4",
+    "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.4.2",
-    "higlass-transcripts": "0.3.8",
-    "higlass-text": "0.1.6",
-    "higlass-orthologs": "0.2.4",
-    "higlass-clinvar": "0.2.5",
-    "higlass-pileup": "1.4.1",
-    "higlass-gnomad": "0.2.2-beta.1",
-    "higlass-general-vcf": "0.1.2-beta.1",
-    "higlass-cohort": "0.3.3",
-    "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-sv": "1.0.4-beta.0",
+    "higlass-text": "0.1.6",
+    "higlass-transcripts": "0.3.8",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
     "path-browserify": "^1.0.1",
     "pixi.js": "^5.2.4",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
@@ -91,7 +92,8 @@
     "stream-browserify": "^3.0.0",
     "subprocess-middleware": "0.2.0",
     "underscore": "^1.10.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "util": "^0.12.5"
   },
   "optionalDependencies": {
     "cypress": "^10.3.0"
