Upgrade higlass general-vcf, gnomad, sv

--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-clinvar": "0.2.5",
     "higlass-cohort": "0.3.3",
-    "higlass-general-vcf": "0.1.2-beta.1",
-    "higlass-gnomad": "0.2.2-beta.2",
+    "higlass-general-vcf": "0.1.3",
+    "higlass-gnomad": "0.2.3",
     "higlass-orthologs": "0.2.4",
     "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.4.2",
-    "higlass-sv": "1.0.4-beta.0",
+    "higlass-sv": "1.0.5",
     "higlass-text": "0.1.6",
     "higlass-transcripts": "0.3.8",
     "markdown-to-jsx": "^6.11.4",
