--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "bootstrap": "^4.6.1",
     "empty-module": "0.0.2",
     "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.29.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "plugin-error": "^1.0.1",
+    "prettier": "^2.8.7",
+    "prettier-eslint-cli": "^7.1.0",
     "sass": "^1.51.0",
     "sinon": "^1.17.6",
     "source-map-support": "^0.5.19",
@@ -49,9 +53,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@gmod/tabix": "^1.5.3",
     "@gmod/vcf": "^5.0.6",
+    "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.63",
     "auth0-lock": "^11.33.0",
     "d3": "^5.16.0",
@@ -61,18 +65,18 @@
     "form-serialize": "^0.7.2",
     "generic-filehandle": "^3.0.0",
     "higlass": "1.12.2",
+    "higlass-bigwig-datafetcher": "0.1.2",
+    "higlass-clinvar": "0.2.5",
+    "higlass-cohort": "0.3.3",
+    "higlass-general-vcf": "0.1.2-beta.1",
+    "higlass-gnomad": "0.2.2-beta.1",
+    "higlass-orthologs": "0.2.4",
+    "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.4.2",
-    "higlass-transcripts": "0.3.8",
-    "higlass-text": "0.1.6",
-    "higlass-orthologs": "0.2.4",
-    "higlass-clinvar": "0.2.5",
-    "higlass-pileup": "1.4.1",
-    "higlass-gnomad": "0.2.2-beta.1",
-    "higlass-general-vcf": "0.1.2-beta.1",
-    "higlass-cohort": "0.3.3",
-    "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-sv": "1.0.4-beta.0",
+    "higlass-text": "0.1.6",
+    "higlass-transcripts": "0.3.8",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
