Fix eslint rules + adjust prettier rules config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,9 @@
 {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true
+    "bracketSameLine": true,
+    "endOfLine": "lf",
+    "singleQuote": true,
+    "jsxSingleQuote": false,
+    "tabs": true,
+    "tabWidth": 4,
+    "trailingComma": "es5"
 }
