--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,42 +1,34 @@
 {
-    "rules": {        
+    "rules": {  
         "array-callback-return" : "error",
-        "arrow-body-style" : ["error", "as-needed", { "requireReturnForObjectLiteral": true }],
-        "arrow-parens" : ["error", "always"],
-        "generator-star-spacing" : "error",
-        "indent": [2, 4, {"SwitchCase": 1}],
-        "getter-return" :"error",
-        "jsx-quotes" : ["error", "prefer-double"],
-        "linebreak-style": [2, "unix"],
         "new-cap" : "error",
         "no-await-in-loop": "error",
         "no-console": 0,
         "no-empty": 0,
         "no-global-assign" : "error",
         "no-invalid-this" : "error",
-        "no-tabs" : "error",
-        "no-trailing-spaces" : "error",
         "no-undef": 0,
         "no-unused-vars": ["warn", { "args" : "none" }],
         "no-useless-concat": "error",
         "no-useless-constructor": "error",
-        "no-whitespace-before-property" : "error",
-        "object-curly-spacing" : ["error", "always"],
         "prefer-const" : "error",
         "prefer-destructuring" : "warn",
         "prefer-spread" : "error",
-        "prettier/prettier": "error",
+        "prettier/prettier":
+            ["error", {
+                "endOfLine": "lf",
+                "tabs": true,
+                "tabWidth": 4,
+                "singleQuote": true,
+                "jsxSingleQuote": false
+            }],
         "react/button-has-type" : "error",
         "react/destructuring-assignment" : ["warn", "always"],
         "react/display-name" : 0,
-        "react/jsx-closing-tag-location" : "error",
-        "react/jsx-indent" : "error",
-        "react/jsx-indent-props" : "error",
         "react/jsx-key" : "error",
         "react/jsx-no-duplicate-props" : "error",
         "react/jsx-no-bind" : ["warn", { "ignoreDOMComponents" : true }],
         "react/jsx-pascal-case" : ["error", { "allowAllCaps" : true }],
-        "react/jsx-props-no-multi-spaces" : "error",
         "react/no-access-state-in-setstate" : "error",
         "react/no-direct-mutation-state" : "error",
         "react/no-children-prop" : 1,
@@ -46,7 +38,6 @@
         "react/no-this-in-sfc" : "error",
         "react/no-typos": "error",
         "react/prop-types": [1, { "skipUndeclared" : true }],
-        "semi": ["error", "always"],
         "valid-typeof" : ["error", { "requireStringLiterals": true }]
     },
     "env": {
