--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,14 +62,17 @@
         "prettier"
     ],
     "overrides": [
-        {
-            "files" : ["./src/encoded/static/data/*.jsx"],
-            "rules" : {
-                "react/jsx-no-undef" : 0,
-                "semi" : 0,
-                "react/react-in-jsx-scope" : 0
-            }
-        }
+        // Removed these in v1 prettier update due to incompatibility; 
+        // instead not auto-formatting static sections. Keeping for reference, in case
+        // parsing these files becomes necessary/more options available in future.
+        // {
+        //     "files" : ["./src/encoded/static/data/*.jsx"],
+        //     "rules" : {
+        //         "react/jsx-no-undef" : 0,
+        //         "semi" : 0,
+        //         "react/react-in-jsx-scope" : 0
+        //     }
+        // }
     ],
     "settings": {
         "react": {
