--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ botocore = "^1.29.79"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
+# At least on Mac M1 if cryptography package is later than 39.x.x (i.e. 40.x.x and up)
+# we get odd 'pyo3_runtime.PanicException: Python API call failed' error on import
+# of cryptography.hazmat.bindings._rust in cryptography package. 2023-04-21.
+cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
 dcicsnovault = "7.3.0"
