--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "8.0.1.0b3"
-dcicutils = "^6.10.1"
+dcicsnovault = "8.0.1.1b4"
+dcicutils = ">=6.10.1"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.3,<1"
@@ -82,7 +82,7 @@ psycopg2-binary = "^2.9.6"
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
 pycparser = "2.14"
-PyJWT = "1.5.3"
+PyJWT = ">=1.5.3"
 pyparsing = "^3.0.9"
 pyramid = "1.10.4"
 pyramid_localroles = ">=0.1,<1"
