--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,9 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.9"
+python = ">=3.8.1,<3.10"
 awscli = ">=1.27.79"
-boto3 = "^1.26.79"
+boto3 = "^1.26.133"
 botocore = "^1.29.79"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
@@ -49,8 +49,9 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "7.3.0"
-dcicutils = "^6.10.0"
+#dcicsnovault = "7.3.0"
+dcicsnovault = "8.1.0.2b2"
+dcicutils = "^7.4.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -82,7 +83,7 @@ py = ">=1.10.0"  # used by pytest, not sure if elsewhere
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
 pycparser = "2.14"
-PyJWT = "1.5.3"
+PyJWT = "^2.6.0"
 pyparsing = "^3.0.7"
 pyramid = "1.10.4"
 pyramid_localroles = ">=0.1,<1"
