--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@gmod/tabix": "^1.5.3",
     "@gmod/vcf": "^5.0.6",
-    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.63",
+    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.64b15",
     "auth0-lock": "^11.33.0",
     "d3": "^5.16.0",
     "date-fns": "^2.28.0",
