--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "8.0.1.3b6"
-dcicutils = ">=7.4.1"
+dcicsnovault = "8.0.1.5b13"
+dcicutils = "7.4.3.5b19"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.3,<1"
