--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,9 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-#dcicsnovault = "7.3.0"
-dcicsnovault = "8.1.0.2b2"
-dcicutils = "^7.4.0"
+dcicsnovault = "8.2.0.1b1"
+#dcicutils = "^7.4.0"
+dcicutils = "7.4.4.5b21"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
