--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "13.2.1.1b4"  # to become 14.0.0
+version = "13.2.1.1b5"  # to become 14.0.0
 description = "Computational Genome Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -50,7 +50,7 @@ cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
 dcicsnovault = "8.0.1.5b17"
-dcicutils = "7.4.4.5b25"
+dcicutils = "^7.5.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.3,<1"
