--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "bootstrap": "^4.6.1",
+    "bufferutil": "^4.0.7",
     "eslint": "^8.10.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "^7.29.2",
@@ -42,6 +43,7 @@
     "source-map-support": "^0.5.21",
     "string-replace-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.3.1",
+    "utf-8-validate": "^5.0.10",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-deadcode-plugin": "^0.1.16"
@@ -62,27 +64,19 @@
     "higlass": "1.12.2",
     "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-clinvar": "0.2.5",
-    "higlass-cohort": "0.3.3",
-    "higlass-general-vcf": "0.1.3",
-    "higlass-gnomad": "0.2.3",
+    "higlass-cohort": "0.3.4",
+    "higlass-general-vcf": "0.1.2-beta.1",
+    "higlass-gnomad": "0.2.2-beta.1",
     "higlass-orthologs": "0.2.4",
-    "higlass-pileup": "1.5.0",
+    "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.4.2",
-    "higlass-sv": "1.0.5",
-    "higlass-text": "0.1.6",
-    "higlass-orthologs": "0.2.4",
-    "higlass-clinvar": "0.2.5",
-    "higlass-pileup": "1.4.1",
-    "higlass-gnomad": "0.2.2-beta.1",
-    "higlass-general-vcf": "0.1.2-beta.1",
-    "higlass-cohort": "0.3.4",
-    "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-sv": "1.0.4-beta.0",
+    "higlass-text": "0.1.6",
+    "higlass-transcripts": "0.3.8",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
-    "path-browserify": "^1.0.1",
     "pixi.js": "^5.2.4",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
@@ -99,8 +93,7 @@
     "stream-browserify": "^3.0.0",
     "subprocess-middleware": "0.2.0",
     "underscore": "^1.10.2",
-    "url": "^0.11.0",
-    "util": "^0.12.5"
+    "url": "^0.11.0"
   },
   "optionalDependencies": {
     "cypress": "^10.3.0"
