Continute migration of ingestion code to snovault.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ plaster = "1.0"
 plaster-pastedeploy = "0.6"
 psutil = "^5.9.0"
 psycopg2-binary = "^2.9.3"
+publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"
 py = ">=1.10.0"  # used by pytest, not sure if elsewhere
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
@@ -211,7 +212,7 @@ verify-item = "encoded.commands.verify_item:main"
 clear-variants-and-genes = "encoded.commands.clear_variants_and_genes:main"
 gene-table-intake = "encoded.commands.gene_table_intake:main"
 ingest-vcf = "encoded.commands.ingest_vcf:main"
-ingestion-listener = "encoded.ingestion_listener:main"
+ingestion-listener = "encoded.ingestion.ingestion_listener:main"
 reformat-vcf = "encoded.commands.reformat_vcf:main"
 variant-table-intake = "encoded.commands.variant_table_intake:main"
 
