C4-1019: continue ingestion-to-snovault migration work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,10 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "8.2.0.1b1"
+dcicsnovault = "8.2.0.1b36"
 #dcicutils = "^7.4.0"
-dcicutils = "7.4.4.5b21"
+#dcicutils = "7.4.4.5b21"
+dcicutils = "^7.5.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -79,7 +80,6 @@ plaster = "1.0"
 plaster-pastedeploy = "0.6"
 psutil = "^5.9.0"
 psycopg2-binary = "^2.9.3"
-publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"
 py = ">=1.10.0"  # used by pytest, not sure if elsewhere
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
@@ -200,6 +200,7 @@ order-schema-columns-and-facets = "encoded.commands.order_schema_columns_and_fac
 profiler = "encoded.commands.profiler:main"
 prepare-docker = "encoded.commands.prepare_template:prepare_docker_main"
 prepare-local-dev = "encoded.commands.prepare_template:prepare_local_dev_main"
+publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"
 purge-item-type = "encoded.commands.purge_item_type:main"
 run-upgrade-on-inserts = "encoded.commands.run_upgrader_on_inserts:main"
 spreadsheet-to-json = "encoded.commands.spreadsheet_to_json:main"
