Add use of license checker.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
 dcicsnovault = "8.0.1.5b17"
-dcicutils = "^7.5.0"
+dcicutils = "7.5.1.2b1" # was "^6.10.0", should be "^7.6.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.3,<1"
