Refactor QC metrics collection
Specifically, incorporate use of item models and redesign QC collection
approach.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "7.3.0"
-dcicutils = "^6.10.0"
+dcicsnovault = { path = "../snovault", develop = true}
+dcicutils = { path = "../utils", develop = true}
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -81,7 +81,7 @@ py = ">=1.10.0"  # used by pytest, not sure if elsewhere
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
 pycparser = "2.14"
-PyJWT = "1.5.3"
+PyJWT = "^2.6.0"
 pyparsing = "^3.0.7"
 pyramid = "1.10.4"
 pyramid_localroles = ">=0.1,<1"
