--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@gmod/tabix": "^1.5.3",
     "@gmod/vcf": "^5.0.6",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
-    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.65b1",
+    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.66",
     "auth0-lock": "^11.33.0",
     "d3": "^5.16.0",
     "date-fns": "^2.28.0",
