--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "^8.0.0"
+dcicsnovault = "7.3.0.0b1"
 dcicutils = "7.5.2.1b0" 
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
