--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "8.2.0.1b47"
+dcicsnovault = "9.0.0"
 #dcicutils = "^7.4.0"
 #dcicutils = "7.4.4.5b21"
 dcicutils = "^7.5.0"
