--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     "@babel/core": "^7.19.3",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.19.3",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
+    "@babel/plugin-proposal-pipeline-operator": "^7.18.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/plugin-transform-template-literals": "^7.18.9",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@babel/runtime": "^7.19.4",
+    "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "bootstrap": "^4.6.1",
