Various changes in service of IP checking, and some fixes to avoid some warnings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
 dcicsnovault = "8.2.0.1b46"
 #dcicutils = "^7.4.0"
 #dcicutils = "7.4.4.5b21"
-dcicutils = "^7.5.0"
+dcicutils = "7.6.0.2b8"  # ^7.5.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
