--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "14.1.2"
+version = "14.2.0"
 description = "Computational Genome Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -49,24 +49,18 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "9.1.1"
-#dcicutils = "^7.4.0"
-#dcicutils = "7.4.4.5b21"
-dcicutils = "^7.5.0"
+dcicsnovault = "^10.0.1"
+dcicutils = "^7.7.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
 granite-suite = "0.1.11b0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
 h5py = "^3.8.0"
-#h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
-# html5lib = "0.9999999"
 humanfriendly = "^1.44.9"
 hupper = "1.5"
 idna = ">=2.10,<3"
 isodate = ">=0.6.1,<1"
 jmespath = ">=0.10.0,<1"
-jsonschema_serialize_fork = "^2.1.1"
-# keepalive = ">=0.5,<1"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
 numpy = "^1.24.2"  # negspy needs it
@@ -74,7 +68,6 @@ openpyxl = "^3.0.7,!=3.0.8"  # a version 3.0.8 appeared but then got withdrawn, 
 passlib = "^1.7.4"
 PasteDeploy = "1.5.2"
 pbkdf2 = "1.3"
-# Pillow = "^6.2.2"
 plaster = "1.0"
 plaster-pastedeploy = "0.6"
 psutil = "^5.9.0"
@@ -109,7 +102,7 @@ rutter = ">=0.3,<1"
 sentry-sdk = "^1.5.6"
 simplejson = "^3.17.0"
 SPARQLWrapper = "^1.8.5"
-SQLAlchemy = "1.4.41"  # Pinned because >=1.3.17 is broken for us (circular constraints prevent deletes)
+SQLAlchemy = "1.4.41"
 structlog = ">=19.2.0,<20"
 #submit4dn = "0.9.7"
 subprocess-middleware = "^0.3.0"
