--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ awscli = ">=1.27.79"
 boto3 = "^1.26.133"
 botocore = "^1.29.79"
 certifi = ">=2021.5.30"
-chardet = "3.0.4"
+#chardet = "3.0.4"
+chardet = "^5.2.0"
 codeguru-profiler-agent = "^1.2.4"
 # At least on Mac M1 if cryptography package is later than 39.x.x (i.e. 40.x.x and up)
 # we get odd 'pyo3_runtime.PanicException: Python API call failed' error on import
@@ -49,8 +50,11 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "10.0.2.1b18"
-dcicutils = "7.10.0.1b2"
+#dcicsnovault = "10.0.2.1b18"
+#dcicsnovault = "10.0.4.1b1"
+dcicsnovault = "10.0.4.1b9"
+#dcicutils = "7.10.0.1b2"
+dcicutils = "7.11.0.1b9"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -88,7 +92,8 @@ python-dateutil = "^2.8.2"
 # python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
 python_magic = ">=0.4.24,<1"
 pytz = ">=2021.3"
-PyYAML = "^6.0.1"
+#PyYAML = "^6.0.1"
+PyYAML = "5.3.1"
 rdflib = "^4.2.2"
 rdflib-jsonld = ">=0.5.0,<1.0.0"
 # repoze.debug is needed to use pyramid.pserve - Will Feb 17 2022
