--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "10.0.4.1b18"
-dcicutils = "7.12.0.2b6"
+dcicsnovault = "^10.0.2"
+dcicutils = "^7.7.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
