Support for Python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,8 @@ codeguru-profiler-agent = "^1.2.4"
 # of cryptography.hazmat.bindings._rust in cryptography package. 2023-04-21.
 cryptography = "39.0.2"
 colorama = "0.3.3"
-# dcicpyvcf = "^3.0.0.1b3"
-dcicpyvcf = "^3.0.0"
+# dcicpyvcf = "^3.0.0"
+dcicpyvcf = "^3.0.0.1b5"
 #dcicsnovault = "^11.14.2"
 dcicsnovault = "11.16.0.1b3"
 #dcicutils = "^8.8.5"
