Support for Python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,7 @@ codeguru-profiler-agent = "^1.2.4"
 # of cryptography.hazmat.bindings._rust in cryptography package. 2023-04-21.
 cryptography = "39.0.2"
 colorama = "0.3.3"
-# dcicpyvcf = "^3.0.0"
-dcicpyvcf = "^3.0.0.1b7"
+dcicpyvcf = "^3.1.0"
 dcicsnovault = "^11.18.0"
 dcicutils = "^8.13.0"
 elasticsearch = "7.13.4"
