dcicutils update version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "^3.1.0"
 dcicsnovault = "^11.21.0"
-dcicutils = "^8.13.3"
+# dcicutils = "^8.13.3"
+dcicutils = "8.13.3.1b10"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
